# mygit

./: .gitignore  README.md  Readme.md  auto_git.py  install.sh  install_daemon.sh  mygit_core.py  mygit_ui.py  pyproject.toml  uninstall.sh
